fixed overflow issues in mobile device

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
     min-height: 100vh;
     width: 100%;
     display: flex;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 
@@ -52,7 +52,7 @@
 .container .display-wrapper {
     border-left: 1px solid grey;
     max-width: 100%;
-    flex: 1 1 0%;
+    max-height: 100vh;
     padding: 10px 12px;
 }
 
@@ -60,13 +60,12 @@
 .container .display-wrapper .display-numbers {
     display: flex;
     column-gap: 10px;
-    height: max-content;
 }
 
 
 .container .display-wrapper .display-numbers .numbers-area {
     font-size: var(--current-display-size);
-    flex: 1 1 0%;
+    /* flex: 1 1 0%; */
     max-width: 92%;
     border: none;
     outline: none;
@@ -98,6 +97,10 @@
 .container .display-wrapper .histories-wrapper {
     display: grid;
     row-gap: 20px;
+    overflow-y: auto;
+    /* background-color: red; */
+    max-height: 100%;
+    padding-bottom: 50px;
 }
 
 .container .display-wrapper .histories-wrapper .operation-area {
